# tick

./: REWRITE_STATUS.md  pyproject.toml
doc/: REWRITE_PLAN.md
our-hawkes/: PARITY.md  README.md  pyproject.toml
our-hawkes/benchmarks/: benchmark_numba_hot_paths.py
our-hawkes/examples/: fit_em.py  fit_exp_kernel.py  hawkes_time_rescaling_gof.ipynb  plot_hawkes_adm4.py  plot_hawkes_conditional_law.py  plot_hawkes_cumulant_matching.py  plot_hawkes_cumulants_matching.py  plot_hawkes_em.py  plot_hawkes_estimated_intensity.py  plot_hawkes_simulation.py  plot_poisson_simulation.py  simulate_hawkes.py
our-hawkes/src/our_hawkes/: __init__.py  base.py  plot.py
our-hawkes/src/our_hawkes/hawkes/: __init__.py  inference.py  kernels.py  models.py  numeric.py  plot.py  simulation.py  solvers.py
our-hawkes/tests/: test_benchmark_smoke.py  test_conditional_law_marked.py  test_core.py  test_nonparametric_tick_behavior.py  test_numba_learner_equivalence.py  test_numba_numeric_equivalence.py  test_simulation_parity.py  test_tick_compat.py  test_tick_public_behavior.py
our-hawkes/tests/tick_equivalence/: README.md  __init__.py  gap_registry.py  report_equivalence.py  test_conditional_law_parity.py  test_cumulant_matching_parity.py  test_equivalence_ledger.py  test_hawkes_adm4_parity.py  test_hawkes_em_parity.py  test_parametric_learners_parity.py  test_simulation_stochastic_parity.py  test_sumgaussians_basis_parity.py
tick/base/: timefunc.py
tick/dataset/: download_helper.py
tick/hawkes/: conftest.py
tick/plot/: plot_point_processes.py
tick/simulation/: features.py
(+49 files in other folders)
